--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.4.0
+streamlit==1.18.1
+streamlit-audiorec==0.1.3
+streamlit-audiorecorder==0.0.4
+streamlit-webrtc==0.47.1
 langchain
 openai
 chromadb
