--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,7 @@ pandas==1.2.5
 PyPDF2
 googletrans 
 sentencepiece
-torch
-torch==1.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+--find-links https://download.pytorch.org/whl/cu118
+torch==1.12.0+cu118
+torchvision==0.13.0+cu118
+torchaudio==0.12.0+cu118
