--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ pandas==1.2.5
 PyPDF2
 googletrans 
 sentencepiece
-torch==1.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==1.10.0
+torchvision==0.11.1
