--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,10 @@ pandas==1.2.5
 PyPDF2
 googletrans 
 sentencepiece
--f https://data.pyg.org/whl/torch-1.13.0+cpu.html
-torch-scatter
+torch==1.12.1
+
+torch-geometric==2.1.0
+-f https://data.pyg.org/whl/torch-1.12.1+cpu.html 8
+torch-scatter==2.0.9
+-f https://data.pyg.org/whl/torch-1.12.1+cpu.html 8
+torch-sparse==0.6.16
