--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,6 @@ pandas==1.2.5
 PyPDF2
 googletrans 
 sentencepiece
-torch==1.12.1
-
-torch-geometric==2.1.0
--f https://data.pyg.org/whl/torch-1.12.1+cpu.html 8
-torch-scatter==2.0.9
--f https://data.pyg.org/whl/torch-1.12.1+cpu.html 8
-torch-sparse==0.6.16
+tensorflow==2.9.0
+tensorflow-text==2.9.0
+tensorflow-hub
